--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <groupId>de.agilecoders.wicket.mustache</groupId>
     <artifactId>wicket-mustache-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <name>wicket-mustache-parent</name>
-    <description/>
+    <description />
     <url>https://github.com/l0rdn1kk0n/wicket-mustache</url>
 
     <scm>
@@ -71,7 +71,7 @@
             <dependency>
                 <groupId>de.agilecoders.wicket.webjars</groupId>
                 <artifactId>wicket-webjars</artifactId>
-                <version>${wicket-webjars.version}</version>
+                <version>0.1.0</version>
             </dependency>
 
             <dependency>
