--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>de.agilecoders.wicket.mustache</groupId>
     <artifactId>wicket-mustache-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <name>wicket-mustache-parent</name>
     <description />
     <url>https://github.com/l0rdn1kk0n/wicket-mustache</url>
