--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>de.agilecoders.wicket.mustache</groupId>
         <artifactId>wicket-mustache-parent</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>de.agilecoders.wicket.mustache</groupId>
     <artifactId>samples</artifactId>
     <packaging>war</packaging>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <name>samples</name>
 
     <licenses>
