--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
             <dependency>
                 <groupId>de.agilecoders.wicket.webjars</groupId>
                 <artifactId>wicket-webjars</artifactId>
-                <version>0.1.0</version>
+                <version>${wicket-webjars.version}</version>
             </dependency>
 
             <dependency>
@@ -209,11 +209,11 @@
         <mvn.version>3.0.0</mvn.version>
 
         <versions-maven-plugin.version>1.3.1</versions-maven-plugin.version>
-        <wicket.version>6.4.0</wicket.version>
+        <wicket.version>7.0.0</wicket.version>
         <mustache.version>0.8.8</mustache.version>
         <mustachejs.version>0.7.0</mustachejs.version>
         <org.codehaus.jackson.version>1.9.11</org.codehaus.jackson.version>
-        <wicket-webjars.version>0.1.0-SNAPSHOT</wicket-webjars.version>
+        <wicket-webjars.version>0.5.3</wicket-webjars.version>
     </properties>
 
 </project>
